# ter-cli

./: .gitignore  Cargo.toml  README.md  install.sh
src/: bootloader.rs  defmt.rs  descriptor.rs  flash.rs  flash_external_flash.rs  flash_size.rs  main.rs  projects.rs  self_update.rs
