[package]
name = "ter-cli"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
cached = "0.59.0"
clap = { version = "4.5.60", features = ["derive"] }
defmt-decoder = "1.1.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
directories = "6.0.0"
env_logger = "0.11.9"
log = "0.4.29"
md5 = "0.8.0"
nix = { version = "0.31.2", features = ["net"] }
probe-rs = "0.31.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_jcs = "0.1.0"
serde_json = "1.0.149"
smol = "2.0.2"
smol-timeout = "0.6.1"
socketcan = { version = "3.5.0", features = ["smol"] }
toml = "1.0.3"
